--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto A</title>
 <link href="CSS/estilos.css" rel="stylesheet" type = "text/css">    
+<script src="JS/javascript.js"></script>
 </head>
 <body>
     <h1>Proyecto empresarial</h1>
     <p>Párrafo agregado</p>
+    <input type ="button"
+    onclick="saludo()" value="Dale ya!">
 </body>
 </html>
