--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Proyecto empresarial</h1>
     <p>Párrafo agregado</p>
+    <p>Agregar tercer párrafo en main</p>
+    
 </body>
 </html>
